stub for polarization section and filled out Overview outline

--- a/LaTeX/intro.tex
+++ b/LaTeX/intro.tex
@@ -139,9 +139,15 @@ can communicate, and social network structure.
 
 \section{Rising extremism and polarization}
 
-The basics.
+Most broadly, the projects in this dissertation advance our understanding
+of extremism and polarization. It lays some groundwork for predicting 
+rising extremism and polarization. Explaining and predicting 
+extremism and polarization is a problem studied by researchers across disciplines
+and subdisciplines, with many nuanced approaches. In this section I 
+introduce a selection of related, relevant work on this problem.
 
-\citeA{Rollwage2019} among many others I will add to here.
+To explain rising extremism and polarization
+
 
 
 \subsection{How real is polarization, and who is becoming polarized?}
@@ -166,10 +172,27 @@ observers who begin to pay attention only around election time~\cite{Kinder2017}
 \subsection{A neurobiological view on group dynamics}
 
 
+\section{Model-based theoretical approach}
+
+Explain how models are used throughout
+\begin{enumerate}
+  \item 
+    Dynamical impulse model of violent metaphor use 
+    increase near debates and elections
+  \item
+    Social influence model (could get into other such models, e.g., bounded confidence)
+  \item
+    Generative statistical model of false group polarization detections.
+    Formalizing the unformalizable.
+\end{enumerate}
+
 \section{Overview}
 
 \subsection{Violence metaphors foster extremism and polarization}
 
+\subsection{Stubborn extremism explanation of group polarization}
+
+\subsection{Many observations group polarization are plausibly false positives}
 
 \subsection{Opportunities and limits for predicting polarization}
 
