minor additions to metaphor section

--- a/LaTeX/intro.tex
+++ b/LaTeX/intro.tex
@@ -251,8 +251,31 @@ with a majority independently aligned either out of an honest belief in
 evaluating individuals and not parties, or who are casual political
 observers who begin to pay attention only around election time~\cite{Kinder2017}.
 
-\section{Language and communication in polarization}
+\section{Metaphor and framing in politics and polarization}
 
+In the first study of this dissertation, I analyze violence metaphor use on
+cable news around the times of the 2012 and 2016 United States presidential
+debates and elections. In this section, I zoom out to discuss metaphor's
+importance in cognitive science and to discuss how metaphor is one of several
+methods studied by communication and political scientists as a method of
+\emph{framing} more generally~\cite{Fillmore1982}---though use of that 
+word may be misleading due to being used too freely for too many 
+diverse situations~\cite{Cacciatore2016}.
+
+Metaphor is important in cognitive science because metaphor enables people 
+to scaffold their understanding of abstract concepts in terms of more concrete
+concepts~\cite{Lakoff1986}. In this dissertation, we focus on the use of metaphor
+to understand political events, actions, and debates in terms of physical
+violence. This is just one of hundreds or thousands of ways metaphor is 
+used~\cite{Dodge2015}. In politics, another important class of metaphors is
+metaphors for refugees and immigrants. It changes our behavior towards 
+immigrants if we cast them in a negative light as something destructive, 
+such as an infestation or a flood, compared to finding more positive 
+metaphors~\cite{Magaña2018}.
+
+Metaphor is a more general instance of a way to frame a particular topic. 
+Linguistic frames are ``instantiated'' based on words being used to describe the
+topic, along with the emotional valence and other factors of the words. (MORE)
 
 
 \section{Cognitive and social factors in polarization}
